2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	A bit cleanup 
	* gameswf/gameswf_types.cpp

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed get_bound() bug that show one's worth during rotation
	* gameswf/gameswf_types.cpp

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
		
	Cleanup of get_bound() stuff
	* gameswf/gameswf.h
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_button.h
	* gameswf/gameswf_character.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_freetype.cpp
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_sprite_def.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/gameswf_types.cpp
	* gameswf/gameswf_video_impl.cpp
	* gameswf/gameswf_video_impl.h
	* gameswf/plugins/lib3ds/gameswf_3ds.h
	* gameswf/win32/VC7/gameswf.vcproj
	* gameswf/win32/VC8/gameswf.vcproj

2007-07-02  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_sprite.cpp: move on_event(ENTER_FRAME) to after
	the update of m_current_frame.  Based on tests, this seems to be
	correct.  If this breaks other movies, then we need to devise more
	automated tests and fix them.
	* gameswf/*/test_motion_exec_order.*: a new test to verify that
	objects are moved after onEnterFrame() is called.
	* gameswf/gameswf_batch_test.py: we now pass tests frame1, frame2,
	and test_motion_exec_order.
	* gameswf/tests/frame*.txt: tweak the tests and add comments

2007-07-02  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_batch_test.py: ignore comment lines (starting
	with '#') in test files.  Add test_currentframe.txt to the list
	of passing tests.
	* gameswf/samples/test_currentframe.fla,swf: very simple test of
	_currentFrame.
	* gameswf/tests/test_currentframe.txt: new test to verify
	_currentFrame

2007-07-02  Thatcher Ulrich <tu@tulrich.com>
	* Makefile: add libpng files to win32_dependencies.zip
	* gameswf/gameswf_batch_test.py: update the automated test suite.